crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_single_column_sql_text_search.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 361,
    "answer": "The number of ways is \\( 18 \\times 17 \\times 16 = \\boxed{4896} \\).",
    "trunc(text_search(qs, Utf8(\"second\"))._score,Int64(3))": 4.683
  },
  {
    "id": 9,
    "answer": "The statement \"T minus 50 seconds\" indicates that there are $\\boxed{50 \\text{ seconds}}$ remaining until lift-off.",
    "trunc(text_search(qs, Utf8(\"second\"))._score,Int64(3))": 4.321
  }
]
