crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_single_column_sql_vector_search.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 361,
    "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants.",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.784
  },
  {
    "id": 462,
    "question": "How many groups of 2 are in 14?",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.774
  },
  {
    "id": 464,
    "question": "How many groups of 5 are in 25?",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.761
  },
  {
    "id": 463,
    "question": "How many groups of 3 are in 18?",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.759
  }
]
