crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_single_column_sql_vector_search_no_score.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
  },
  {
    "question": "How many groups of 2 are in 14?"
  },
  {
    "question": "How many groups of 5 are in 25?"
  },
  {
    "question": "How many groups of 3 are in 18?"
  }
]
