crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_single_column_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.66",
      "dataset": "qs",
      "matches": {
        "question": [
          "What is the effect of fibrinolysin in the reagents on the Warner-Lambert screening method for fibrinogen?"
        ]
      },
      "primary_key": {
        "id": 938
      }
    },
    {
      "_score": "0.66",
      "dataset": "qs",
      "matches": {
        "question": [
          "Which compound is not an intermediate of the TCA cycle?"
        ]
      },
      "primary_key": {
        "id": 1279
      }
    },
    {
      "_score": "0.65",
      "dataset": "qs",
      "matches": {
        "question": [
          "Which of the following is an intensive property of a system?"
        ]
      },
      "primary_key": {
        "id": 1289
      }
    },
    {
      "_score": "0.64",
      "dataset": "qs",
      "matches": {
        "question": [
          "How is microsporidia infection typically acquired?"
        ]
      },
      "primary_key": {
        "id": 446
      }
    }
  ]
}
