crates/runtime/tests/models/snapshots/integration_models__models__search__metadata_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/models/search.rs
expression: "arrow::util::pretty::pretty_format_batches(&c).expect(\"failed to format RecordBatch for explain plan\")"
snapshot_kind: text
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                      |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search().id, vector_search().answer, trunc(vector_search().score,Int64(3))                                             |
|               |   Sort: vector_search().score DESC NULLS FIRST, fetch=4                                                                                   |
|               |     Projection: vector_search().id, vector_search().answer, trunc(vector_search().score, Int64(3)), vector_search().score                 |
|               |       BytesProcessedNode                                                                                                                  |
|               |         TableScan: vector_search() projection=[id, answer, score]                                                                         |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search().score,Int64(3))@2 as trunc(vector_search().score,Int64(3))]   |
|               |   SortPreservingMergeExec: [score@3 DESC], fetch=4                                                                                        |
|               |     SortExec: TopK(fetch=4), expr=[score@3 DESC], preserve_partitioning=[true]                                                            |
|               |       ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(score@2, 3) as trunc(vector_search().score,Int64(3)), score@2 as score] |
|               |         BytesProcessedExec                                                                                                                |
|               |           ProjectionExec: expr=[id@0 as id, answer@2 as answer, score@1 as score]                                                         |
|               |             BytesProcessedExec                                                                                                            |
|               |               ProjectionExec: expr=[CAST(key@1 AS Int64) as id, 1 - distance@2 as score, answer@0 as answer]                              |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1                                                     |
|               |                   BytesProcessedExec                                                                                                      |
|               |                     S3VectorsQueryExec: limit=30                                                                                          |
|               |                                                                                                                                           |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
