crates/runtime/tests/models/snapshots/integration_models__models__search__metadata_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/models/search.rs
expression: explain_resp?
snapshot_kind: text
---
[
  {
    "plan_type": "logical_plan",
    "plan": "Sort: score DESC NULLS FIRST, fetch=4\n  Projection: vector_search().id, vector_search().answer, trunc(vector_search().score, Int64(3)) AS score\n    BytesProcessedNode\n      Filter: vector_search().source = Utf8(\"textbook_reasoning\")\n        TableScan: vector_search() projection=[id, answer, source, score]"
  },
  {
    "plan_type": "physical_plan",
    "plan": "SortPreservingMergeExec: [score@2 DESC], fetch=4\n  SortExec: TopK(fetch=4), expr=[score@2 DESC], preserve_partitioning=[true]\n    ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(score@3, 3) as score]\n      BytesProcessedExec\n        CoalesceBatchesExec: target_batch_size=8192\n          FilterExec: source@2 = textbook_reasoning\n            ProjectionExec: expr=[id@0 as id, answer@2 as answer, source@3 as source, score@1 as score]\n              CoalesceBatchesExec: target_batch_size=8192\n                CoalesceBatchesExec: target_batch_size=8192\n                  HashJoinExec: mode=Partitioned, join_type=Left, on=[(id@0, id@0)], projection=[id@0, score@1, answer@2, source@4]\n                    CoalesceBatchesExec: target_batch_size=8192\n                      RepartitionExec: partitioning=Hash([id@0], 10), input_partitions=10\n                        CoalesceBatchesExec: target_batch_size=8192\n                          BytesProcessedExec\n                            ProjectionExec: expr=[CAST(key@1 AS Int64) as id, 1 - distance@2 as score, answer@0 as answer]\n                              RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1\n                                BytesProcessedExec\n                                  S3VectorsQueryExec: limit=100\n                    CoalesceBatchesExec: target_batch_size=8192\n                      RepartitionExec: partitioning=Hash([id@0], 10), input_partitions=10\n                        RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1\n                          CoalesceBatchesExec: target_batch_size=8192\n                            BytesProcessedExec\n                              SchemaCastScanExec\n                                DataSourceExec: partitions=1, partition_sizes=[10]\n"
  }
]
