crates/runtime/tests/models/snapshots/integration_models__models__search__metadata_vector_search_sql_projection_metadata_explain.snap
---
source: crates/runtime/tests/models/search.rs
expression: explain_resp?
snapshot_kind: text
---
[
  {
    "plan_type": "logical_plan",
    "plan": "Sort: score DESC NULLS FIRST, fetch=4\n  Projection: vector_search().id, vector_search().answer, vector_search().question, vector_search().subject, trunc(vector_search().score, Int64(3)) AS score\n    BytesProcessedNode\n      TableScan: vector_search() projection=[id, question, answer, subject, score]"
  },
  {
    "plan_type": "physical_plan",
    "plan": "SortPreservingMergeExec: [score@4 DESC], fetch=4\n  SortExec: TopK(fetch=4), expr=[score@4 DESC], preserve_partitioning=[true]\n    ProjectionExec: expr=[id@0 as id, answer@2 as answer, question@1 as question, subject@3 as subject, trunc(score@4, 3) as score]\n      BytesProcessedExec\n        ProjectionExec: expr=[id@0 as id, question@3 as question, answer@2 as answer, subject@4 as subject, score@1 as score]\n          BytesProcessedExec\n            ProjectionExec: expr=[CAST(key@3 AS Int64) as id, 1 - distance@4 as score, answer@0 as answer, question@1 as question, subject@2 as subject]\n              RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1\n                BytesProcessedExec\n                  S3VectorsQueryExec: limit=100\n"
  }
]
