crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.01",
      "data": {
        "question": "Perform the division \\(4 \\div 10\\) and express the resulting decimal in words."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "2. "
        ]
      },
      "primary_key": {
        "id": 612
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "How many groups of 2 are in 14?"
        ]
      },
      "primary_key": {
        "id": 462
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "Find the missing factor in the equation: \\( 42 = 21 \\times \\,? \\)."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "is 2.)"
        ]
      },
      "primary_key": {
        "id": 349
      }
    }
  ]
}
