crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
      "_score": "0.01",
      "dataset": "qs",
      "matches": {
        "answer": [
          "2. "
        ]
      },
      "primary_key": {
        "id": 612
      "_score": "0.01",
      "dataset": "qs",
      "matches": {
        "answer": [
          "is 2.)"
        ]
      },
      "primary_key": {
        "id": 349
